# simwrapper-python-tools

./: .gitignore  CHANGELOG.md  CONFIG-EXAMPLE.yaml  Dockerfile  MANIFEST.in  Makefile  README.md  cmds.sh  pyproject.toml  setup.py
src/: CONFIG-EXAMPLE.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml
src/patches/: apply_pytables_patch.py
src/simwrapper/: FlaskApp.py  GunicornServer.py  MiniFileServer.py  SimpleH5File.py  cli.py
src/simwrapper/static/: CNAME  index.html
src/simwrapper/static/assets/: AggregateDatasetStreamer.worker-BAkFzLI9.js  AggregateOd-B1_rXhOO.js  AggregateOd-BWyxbgD3.css  AggregateOd-Bqhr3HKF.js  AggregateOd-BsBO-8aU.js  AggregateOd-C7hKHrtG.css  AggregateOd-CRQugqrU.js  AggregateOd-CU69xhkl.js  AggregateOd-CXmiQkHA.js  AggregateOd-jUE_QxCY.js  BackgroundLayers-BKrgOf1L.js  BackgroundLayers-CUd5LA7y.js  BackgroundLayers-DFYhz4t7.js  BackgroundLayers-DU3ROBLH.js  BackgroundLayers-DzNi37is.js  BackgroundMapOnTop-84v7Y9j_.js  BackgroundMapOnTop-BYiYvmPG.js  BackgroundMapOnTop-Cz5-VA8k.js  BackgroundMapOnTop-DQly83Xo.js  BackgroundMapOnTop-DvMp_4uf.js  BackgroundMapOnTop-Vmnnrzzn.js  CalculationTable-BSvi5Bee.js  CalculationTable-BjnSjLMs.js  CalculationTable-CUxVKzE8.js  CalculationTable-Cs3QMgej.js  CalculationTable-D3eIayK6.js  CalculationTable-DnFH1Oj1.js  CalculationTable-L4vQ8c-4.js  CarrierViewer-0kVYdKpC.js  CarrierViewer-B6aZtDBu.css  CarrierViewer-BgfQYLk7.css  CarrierViewer-CTQP2GHr.js  CarrierViewer-CVYpj-u_.css  CarrierViewer-CywMFgkq.js  CarrierViewer-Dy0abVm0.js  CarrierViewer-WQZBHXFs.js  CarrierViewer-jJrk5uij.js  (+621 more)
(+53 files in other folders)
